# jackal-path-finder

./: README.md  map_1744446424.yaml  setup.md
configs/: slams_params.yaml
ros_ws/: map.pgm  map.yaml
ros_ws/src/jackal_control/config/: control.yaml  ns_control.yaml  robot_localization.yaml
ros_ws/src/jackal_description/launch/: description.launch
ros_ws/src/jackal_description/urdf/: camera_mount.urdf.xacro  jackal.urdf.xacro
ros_ws/src/jackal_gazebo/worlds/: red_sphere.world
ros_ws/src/jackal_multi/launch/: multi_jackal_world.launch  multi_map_move copy.launch  multi_map_move.launch
ros_ws/src/jackal_navigation/launch/: gmapping_demo.launch
ros_ws/src/rrt_exploration/config/: smoother_params.yaml
ros_ws/src/rrt_exploration/launch/: multi_robot_goal_publisher.launch  random_exploration.launch  smooth_exploration.launch  three_robots.launch
ros_ws/src/rrt_exploration/scripts/: anomaly_detector.py  filter.py  random_exploration copy.py  random_exploration.py  (+4 more)
src/anomaly_detector/: package.xml  setup.cfg  setup.py
src/anomaly_detector/anomaly_detector/: anomaly_detector_node.py
src/jackal_config/: CMakeLists.txt  package.xml
src/jackal_config/scripts/: setup_jackal_env.sh
src/jackal_config/urdf/: camera_mount.urdf.xacro
src/jackal_keypilot/: package.xml  setup.cfg  setup.py
src/jackal_keypilot/jackal_keypilot/: keypilot.py
src/jackal_nav/: package.xml  setup.cfg  setup.py
src/jackal_nav/config/: nav2_params.yaml
src/jackal_nav/launch/: jackal_nav.launch.py
src/jackal_nav/maps/: map_1744446424.pgm  map_1744446424.yaml
(+9 files in other folders)
